--- a/src/MonbonHLM/DashboardBundle/Resources/config/routing.yml
+++ b/src/MonbonHLM/DashboardBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 monbon_hlm_dashboard_homepage:
     path:     /dashboard
-    defaults: { _controller: MonbonHLMDashboardBundle:Dashboard:index }
+    defaults: { _controller: MonbonHLMDashboardBundle:Dashboard:Recuperer }
