--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -75,9 +75,35 @@ fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
     user_class: MonbonHLM\UserBundle\Entity\Utilisateurs
+    from_email:
+                address:              monbonhlmmtp@gmail.com
+                sender_name:          MonbonHLM
     registration:
             form:
                 type: monbonhlm_user_registration
+            confirmation:
+                enabled:    true
+                template:   MonbonHLMUserBundle:Registration:email.txt.twig
+                from_email:
+                  address:  monbonhlmmtp@gmail.com
+                  sender_name:  MonbonHLM
+
     profile:
                   form:
                         type: monbonhlm_user_profile
+
+    change_password:
+            form:
+                type:                 fos_user_change_password
+                name:                 fos_user_change_password_form
+                validation_groups:
+                    # Defaults:
+                    - ChangePassword
+                    - Default
+    resetting:
+            email:
+                from_email:
+                    address:        monbonhlmmtp@gmail.com
+                    sender_name:    MonbonHLM
+
+
